# data-analyzer

./: .gitignore  README.md  pyproject.toml
scripts/: download_data.py
src/data_analyzer/: __init__.py
src/data_analyzer/data/: __init__.py  downloader.py
